--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<input class="color2" type="color" name="color2" value="#ffffff">
 	<br>
 	<br>
-	<button id="random">Generate Random Gradient</button>
+	<button id="random">Generate Random Gradient Colour Combinations</button>
 	<h2>Current CSS Background</h2>
 	<h3></h3>
 	<script type="text/javascript" src="script.js"></script>
